# PyMRItools

./: .gitignore  404.html  README.md  environment.yml  environment_macos.yml  index.html  mkdocs.yml  objects.inv  pyproject.toml  pyproject_uv.toml  search.html
.github/workflows/: mkdocs.yml
api/: index.html
apptainer/: README.md  raven_apptainer.def  slurm_mail_raven.slurm  slurm_mail_viper.slurm  viper_apptainer.def  viper_environment.yml
contribute/contributing/: index.html
contribute/howto_write_code/: index.html
contribute/howto_write_docs/: index.html
docs/: api.md  index.md  installation.md  modeling.md  processing.md  recon.md  sequence_programming.md  simulation.md
docs/contribute/: contributing.md  howto_write_code.md  howto_write_docs.md
docs/training_data/: charm.md  overview.md  synth_seg.md
examples/modeling/emc/: config.json
examples/modeling/mexp/: config.json
examples/processing/denoising/: config.json
examples/processing/unringing/: config.json
examples/raw_data/: config.json  pulseq_config.json  sample_config.pkl
examples/recon/loraks/: loraks_config.json
examples/seqprog/megesse/: config.json  params.json
examples/seqprog/mese/: config.json  params.json
examples/simulation/: emc_params.json  emc_settings.json  gauss120_b375.json  pulse_pypulseq_default_gauss.pkl
examples/simulation/emc/: emc_params.json  emc_settings.json  mese_kernels.pkl  mese_te.json
examples/simulation/emc_megesse_cesp/: emc_params.json  emc_settings.json
installation/: index.html
modeling/: index.html
performance_experiments/loraks/: ac_loraks.py  recon_utils.py  reconstruction.py
performance_experiments/torch_matlab_comp/: compare_matrices.py  js_ac_loraks.py  matlab_utils.py  s_matrix_build.py  test_eig.py
performance_experiments/torch_matlab_comp/matlab/: ac_loraks.m  compare_matrices.m
processing/: index.html
pymritools/: __init__.py
pymritools/config/: __init__.py
pymritools/config/base/: __init__.py  base.py
pymritools/config/basic/: basic.py
pymritools/config/database/: db.py
pymritools/config/emc/: __init__.py  params.py  settings.py
pymritools/config/modeling/: mexp_settings.py
pymritools/config/processing/: __init__.py  denoising.py  unringing.py
pymritools/config/rawdata/: settings.py
pymritools/config/recon/: __init__.py  loraks.py  pyloraks.py
pymritools/config/rf/: __init__.py  pulse.py
pymritools/config/seqprog/: __init__.py  rawdata.py  settings.py
pymritools/modeling/b1_afi/: __init__.py  modeling.py
pymritools/modeling/decay/: mexp.py
pymritools/modeling/dictionary/: cvae.py  data_io.py  fit.py  grid_search.py  grid_search_channels.py  megesse.py  setup.py
pymritools/modeling/dictionary_cvae/: dev.py
pymritools/modeling/dictionary_de/: dev.py
pymritools/modeling/espirit/: functions.py
pymritools/optimization/: pulse_optim.py  sms.py  sweep_config.yml  sweep_config_megesse.yml  sweep_config_mese.yml  vfa_megesse.py  vfa_mese.py  vfa_mese_autograd.py  vfa_mese_de.py
pymritools/processing/coil_compression/: __init__.py  compression.py
pymritools/processing/coil_sens/: smap.py
pymritools/processing/denoising/: __init__.py  dev.py
pymritools/processing/unringing/: __init__.py  functions.py  gibbs_unr.py
pymritools/recon/loraks/: ac_loraks.py  algorithms.py  dev.py  dev_rsvd.py  dev_testing.py  loraks.py  matrix_indexing.py  operators.py  p_loraks.py  readme.md  recon.py  utils.py
pymritools/recon/loraks_arxv/: ac_loraks.py  (+2 more)
pymritools/utils/: __init__.py  algorithms.py  data_io.py  functions.py  funtions.py  matrix_indexing.py  matrix_operators.py  op_indexing.py  plotting.py
recon/: index.html
resources/pulses/: gauss.json
resources/specs/: system_specifications_7T_TerraX_mpi_cbs.json  system_specifications_7T_TerraX_mpi_cbs_safety.json  system_specifications_7T_mpi_cbs.json
search/: search_index.json
sequence_programming/: index.html
simulation/: index.html
tests/: TODO.md  automatic_low_rank_param_extraction.py  joint_echo_sampling.py  low_rank_approximations.py  matrix_indexing.py  phantom_creation.py  run_p_loraks.py  run_ps_loraks.py  show_mapping_visually.py  test_ac_loraks.py  test_espririt_estimation.py  test_low_rank_approximations.py  test_mapping_visually.py  test_memory_requirement.py  test_operators.py  test_performance.py  test_s_matrix_creation.py  test_sim.py  test_svd.py  utils.py
tests/experiments/: automatic_low_rank_param_extraction.py  joint_echo_sampling.py  utils.py
tests/torch_matlab_comp/: compare_matrices.py  js_ac_loraks.py  test_eig.py  test_matrix_order.py
(+149 files in other folders)
