[project]
name = "pymritools"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "nibabel>=5.3.2",
    "numpy>=2.3.4",
    "plotly>=6.4.0",
    "polars>=1.35.2",
    "pypulseq",
    "simple-parsing>=0.1.7",
    "tqdm>=4.67.1",
    "twixtools",
    "wandb>=0.23.0",
    "torch>=2.9.1",
    "scipy-stubs==1.16.3.0",
    "torch-kmeans>=0.2.0",
    "rich>=14.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv.sources]
twixtools = { git = "https://github.com/pehses/twixtools.git", rev = "master" }
pypulseq = { git = "https://github.com/imr-framework/pypulseq.git", rev = "dev" }
torch = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu128", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[project.scripts]
recon_loraks = "pymritools.recon.loraks.recon:loraks_from_cli"
